--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -46,7 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassDanhGiaDA.cs" />
+    <Compile Include="DanhGiaDA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhGiaDA.Designer.cs">
+      <DependentUpon>DanhGiaDA.cs</DependentUpon>
+    </Compile>
     <Compile Include="ClassDanhGia.cs" />
+    <Compile Include="ClassDuAn.cs" />
     <Compile Include="ClassPhanCong.cs" />
     <Compile Include="DanhGia.cs">
       <SubType>Form</SubType>
@@ -54,20 +62,23 @@
     <Compile Include="DanhGia.Designer.cs">
       <DependentUpon>DanhGia.cs</DependentUpon>
     </Compile>
+    <Compile Include="DanhGiaDADAO.cs" />
     <Compile Include="DanhGiaDAO.cs" />
     <Compile Include="DBConnetion.cs" />
+    <Compile Include="DuAn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DuAn.Designer.cs">
+      <DependentUpon>DuAn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DuAnDAO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
+    <Compile Include="PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PhanCong.cs">
@@ -78,6 +89,15 @@
     </Compile>
     <EmbeddedResource Include="DanhGia.resx">
       <DependentUpon>DanhGia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhGiaDA.resx">
+      <DependentUpon>DanhGiaDA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DuAn.resx">
+      <DependentUpon>DuAn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
