--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassDanhGiaDA.cs" />
+    <Compile Include="DangNhap.cs" />
+    <Compile Include="DangNhapDao.cs" />
     <Compile Include="DanhGiaDA.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,7 +66,7 @@
     </Compile>
     <Compile Include="DanhGiaDADAO.cs" />
     <Compile Include="DanhGiaDAO.cs" />
-    <Compile Include="DBConnetion.cs" />
+    <Compile Include="DBConnection.cs" />
     <Compile Include="DuAn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +79,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FDangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FDangNhap.Designer.cs">
+      <DependentUpon>FDangNhap.cs</DependentUpon>
     </Compile>
     <Compile Include="PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
@@ -95,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DuAn.resx">
       <DependentUpon>DuAn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FDangNhap.resx">
+      <DependentUpon>FDangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
