--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -47,29 +47,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassDanhGiaDA.cs" />
-    <Compile Include="DanhGiaDA.cs">
+    <Compile Include="FDanhGiaDA.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DanhGiaDA.Designer.cs">
-      <DependentUpon>DanhGiaDA.cs</DependentUpon>
+    <Compile Include="FDanhGiaDA.Designer.cs">
+      <DependentUpon>FDanhGiaDA.cs</DependentUpon>
     </Compile>
     <Compile Include="ClassDanhGia.cs" />
     <Compile Include="ClassDuAn.cs" />
     <Compile Include="ClassPhanCong.cs" />
-    <Compile Include="DanhGia.cs">
+    <Compile Include="FDanhGia.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DanhGia.Designer.cs">
-      <DependentUpon>DanhGia.cs</DependentUpon>
+    <Compile Include="FDanhGia.Designer.cs">
+      <DependentUpon>FDanhGia.cs</DependentUpon>
     </Compile>
     <Compile Include="DanhGiaDADAO.cs" />
     <Compile Include="DanhGiaDAO.cs" />
-    <Compile Include="DBConnetion.cs" />
-    <Compile Include="DuAn.cs">
+    <Compile Include="DBConnection.cs" />
+    <Compile Include="FDuAn.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DuAn.Designer.cs">
-      <DependentUpon>DuAn.cs</DependentUpon>
+    <Compile Include="FDuAn.Designer.cs">
+      <DependentUpon>FDuAn.cs</DependentUpon>
     </Compile>
     <Compile Include="DuAnDAO.cs" />
     <Compile Include="Form1.cs">
@@ -81,20 +81,20 @@
     <Compile Include="PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PhanCong.cs">
+    <Compile Include="FPhanCong.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PhanCong.Designer.cs">
-      <DependentUpon>PhanCong.cs</DependentUpon>
+    <Compile Include="FPhanCong.Designer.cs">
+      <DependentUpon>FPhanCong.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="DanhGia.resx">
-      <DependentUpon>DanhGia.cs</DependentUpon>
+    <EmbeddedResource Include="FDanhGia.resx">
+      <DependentUpon>FDanhGia.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DanhGiaDA.resx">
-      <DependentUpon>DanhGiaDA.cs</DependentUpon>
+    <EmbeddedResource Include="FDanhGiaDA.resx">
+      <DependentUpon>FDanhGiaDA.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DuAn.resx">
-      <DependentUpon>DuAn.cs</DependentUpon>
+    <EmbeddedResource Include="FDuAn.resx">
+      <DependentUpon>FDuAn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -108,8 +108,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="PhanCong.resx">
-      <DependentUpon>PhanCong.cs</DependentUpon>
+    <EmbeddedResource Include="FPhanCong.resx">
+      <DependentUpon>FPhanCong.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
