--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -46,6 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckinDao.cs" />
+    <Compile Include="CheckoutDao.cs" />
+    <Compile Include="FCheckinout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FCheckinout.Designer.cs">
+      <DependentUpon>FCheckinout.cs</DependentUpon>
+    </Compile>
     <Compile Include="ClassDanhGiaDA.cs" />
     <Compile Include="DangNhap.cs" />
     <Compile Include="DangNhapDao.cs" />
@@ -74,6 +82,12 @@
       <DependentUpon>DuAn.cs</DependentUpon>
     </Compile>
     <Compile Include="DuAnDAO.cs" />
+    <Compile Include="FNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FNhanVien.Designer.cs">
+      <DependentUpon>FNhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +100,19 @@
     <Compile Include="FDangNhap.Designer.cs">
       <DependentUpon>FDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="FQuanLy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FQuanLy.Designer.cs">
+      <DependentUpon>FQuanLy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FTruongPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FTruongPhong.Designer.cs">
+      <DependentUpon>FTruongPhong.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NhanVienDao.cs" />
     <Compile Include="PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,6 +122,11 @@
     <Compile Include="PhanCong.Designer.cs">
       <DependentUpon>PhanCong.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuanLyDao.cs" />
+    <Compile Include="TruongPhongDao.cs" />
+    <EmbeddedResource Include="FCheckinout.resx">
+      <DependentUpon>FCheckinout.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DanhGia.resx">
       <DependentUpon>DanhGia.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,8 +139,17 @@
     <EmbeddedResource Include="FDangNhap.resx">
       <DependentUpon>FDangNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FNhanVien.resx">
+      <DependentUpon>FNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FQuanLy.resx">
+      <DependentUpon>FQuanLy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FTruongPhong.resx">
+      <DependentUpon>FTruongPhong.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -118,6 +159,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="PhanCong.resx">
       <DependentUpon>PhanCong.cs</DependentUpon>
@@ -134,6 +176,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DangNhap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\document-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrow-19-32%282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrow-19-32%281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NhanVienName.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
