--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -170,6 +170,12 @@
     <Compile Include="ucMenuBtn.Designer.cs">
       <DependentUpon>ucMenuBtn.cs</DependentUpon>
     </Compile>
+    <Compile Include="UCSailorStar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UCSailorStar.Designer.cs">
+      <DependentUpon>UCSailorStar.cs</DependentUpon>
+    </Compile>
     <Compile Include="UCTienDoDA.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -234,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucMenuBtn.resx">
       <DependentUpon>ucMenuBtn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UCSailorStar.resx">
+      <DependentUpon>UCSailorStar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UCTienDoDA.resx">
       <DependentUpon>UCTienDoDA.cs</DependentUpon>
