--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FDuAn.Designer.cs">
       <DependentUpon>FDuAn.cs</DependentUpon>
     </Compile>
+    <Compile Include="FNhanXet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FNhanXet.Designer.cs">
+      <DependentUpon>FNhanXet.cs</DependentUpon>
+    </Compile>
     <Compile Include="FSuaDA.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,8 @@
     <Compile Include="FThemDA.Designer.cs">
       <DependentUpon>FThemDA.cs</DependentUpon>
     </Compile>
+    <Compile Include="NhanXetDA.cs" />
+    <Compile Include="NhanXetDADAO.cs" />
     <Compile Include="SuaDA.cs" />
     <Compile Include="SuaDADAO.cs" />
     <Compile Include="TDCaNhan.cs" />
@@ -201,6 +209,9 @@
     <EmbeddedResource Include="FNhanVien.resx">
       <DependentUpon>FNhanVien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FNhanXet.resx">
+      <DependentUpon>FNhanXet.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FQuanLy.resx">
       <DependentUpon>FQuanLy.cs</DependentUpon>
     </EmbeddedResource>
@@ -277,6 +288,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SaoVang.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SaoVang1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\VienSaoVang.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\settings1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\trash.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
