--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -209,12 +209,6 @@
     <Compile Include="FTruongPhong.Designer.cs">
       <DependentUpon>FTruongPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="FXinNghi.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FXinNghi.Designer.cs">
-      <DependentUpon>FXinNghi.cs</DependentUpon>
-    </Compile>
     <Compile Include="DAO\NhanVienDAO.cs" />
     <Compile Include="DAO\PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
@@ -260,6 +254,18 @@
     </Compile>
     <Compile Include="UC\UCTienDoDA.Designer.cs">
       <DependentUpon>UCTienDoDA.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add.Designer.cs">
+      <DependentUpon>Add.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FXinNghi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FXinNghi.Designer.cs">
+      <DependentUpon>FXinNghi.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FCheckinout.resx">
       <DependentUpon>FCheckinout.cs</DependentUpon>
@@ -308,9 +314,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FXemDuAn.resx">
       <DependentUpon>FXemDuAn.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FXinNghi.resx">
-      <DependentUpon>FXinNghi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -361,6 +364,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UC\UCSailorStar.resx">
       <DependentUpon>UCSailorStar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add.resx">
+      <DependentUpon>Add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FXinNghi.resx">
+      <DependentUpon>FXinNghi.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
