--- a/QuanLyCongTy/QuanLyCongTy.csproj
+++ b/QuanLyCongTy/QuanLyCongTy.csproj
@@ -57,20 +57,30 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAO\CheckinDao.cs" />
-    <Compile Include="DAO\CheckoutDao.cs" />
-    <Compile Include="FDuAn2.cs">
+    <Compile Include="FXoaPC.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FDuAn2.Designer.cs">
-      <DependentUpon>FDuAn2.cs</DependentUpon>
+    <Compile Include="FXoaPC.Designer.cs">
+      <DependentUpon>FXoaPC.cs</DependentUpon>
     </Compile>
-    <Compile Include="FXemDuAn2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FXemDuAn2.Designer.cs">
-      <DependentUpon>FXemDuAn2.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Model\CongViecModel.cs" />
+    <Compile Include="DataAccessObj\CheckinDao.cs" />
+    <Compile Include="DataAccessObj\CheckoutDao.cs" />
+    <Compile Include="DataAccessObj\CongViecDAO.cs" />
+    <Compile Include="DataAccessObj\HoTroDao.cs" />
+    <Compile Include="DataAccessObj\LoaiPhongBanDAO.cs" />
+    <Compile Include="DataAccessObj\TaiKhoan.cs" />
+    <Compile Include="Model\DuAnModel.cs" />
+    <Compile Include="Model\LoaiPhongBanModel.cs" />
+    <Compile Include="Model\NhanVienModel.cs" />
+    <Compile Include="NhanXetDABUS.cs" />
+    <Compile Include="Model\PhanCongModel.cs" />
+    <Compile Include="SuaDABUS.cs" />
+    <Compile Include="SuaPhanCongBUS.cs" />
+    <Compile Include="ThemDABUS.cs" />
+    <Compile Include="Model\PhongBanModel.cs" />
+    <Compile Include="DataAccessObj\PhongBanDAO.cs" />
+    <Compile Include="DataProvider.cs" />
     <Compile Include="Object\DangNhap.cs" />
     <Compile Include="FChinhPhanCong.cs">
       <SubType>Form</SubType>
@@ -119,6 +129,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Model\HoTroModel.cs" />
+    <Compile Include="ThemPhanCongBUS.cs" />
+    <Compile Include="ThemHoTroBUS.cs" />
+    <Compile Include="ThongTinDABUS.cs" />
     <Compile Include="UserControl\UCBlank.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -175,7 +189,7 @@
     <Compile Include="FDuAn.Designer.cs">
       <DependentUpon>FDuAn.cs</DependentUpon>
     </Compile>
-    <Compile Include="DAO\DuAnDAO.cs" />
+    <Compile Include="DataAccessObj\DuAnDAO.cs" />
     <Compile Include="FKPI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -236,8 +250,8 @@
     <Compile Include="FTruongPhong.Designer.cs">
       <DependentUpon>FTruongPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="DAO\NhanVienDAO.cs" />
-    <Compile Include="DAO\PhanCongDAO.cs" />
+    <Compile Include="DataAccessObj\NhanVienDAO.cs" />
+    <Compile Include="DataAccessObj\PhanCongDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FPhanCong.cs">
@@ -294,6 +308,10 @@
     <Compile Include="FXinNghi.Designer.cs">
       <DependentUpon>FXinNghi.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControl\XemDAChuaHTQLBUS.cs" />
+    <Compile Include="UserControl\XemDADaHTQLBUS.cs" />
+    <Compile Include="UserControl\XemPCChuaHTTPBUS.cs" />
+    <Compile Include="XemDuAnQLBUS.cs" />
     <EmbeddedResource Include="FCheckinout.resx">
       <DependentUpon>FCheckinout.cs</DependentUpon>
     </EmbeddedResource>
@@ -305,9 +323,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FDuAn.resx">
       <DependentUpon>FDuAn.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FDuAn2.resx">
-      <DependentUpon>FDuAn2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FKPI.resx">
       <DependentUpon>FKPI.cs</DependentUpon>
@@ -345,8 +360,8 @@
     <EmbeddedResource Include="FXemDuAn.resx">
       <DependentUpon>FXemDuAn.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FXemDuAn2.resx">
-      <DependentUpon>FXemDuAn2.cs</DependentUpon>
+    <EmbeddedResource Include="FXoaPC.resx">
+      <DependentUpon>FXoaPC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
